# monarch-db

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  _typos.toml  deny.toml
.github/workflows/: ci.yml  publish.yml
scripts/: setup-pre-commit.sh
src/: 00.versions.sql  lib.rs
tests/: directory_configuration.rs  static_configuration.rs
tests/migrations/: 001_create_users.sql  002_create_posts.sql  003_add_indexes.sql
