[package]
name = "monarch-db"
version = "0.1.1"
edition = "2024"
description = "A simple SQLite DB Migration system"
license = "MIT"
rust-version = "1.87"

[dependencies]
camino = { version = "1", features = ["serde1"] }
rusqlite = { version = "0.37" }
serde = { version = "1", features = ["derive"], optional = true }
tracing = "0.1"

[features]
default = []
serde = ["dep:serde"]
bundled = ["rusqlite/bundled"]

[[bin]]
name = "monarch"
path = "src/bin/monarch.rs"

[dev-dependencies]
tempfile = "3.0"
